--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"
         tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
@@ -48,7 +49,9 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <receiver android:name=".ReminderReceiver" />
+        <receiver
+            android:name=".ReminderReceiver"
+            android:exported="true" />
     </application>
 
 </manifest>
