--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -52,6 +55,23 @@
         <receiver
             android:name=".ReminderReceiver"
             android:exported="true" />
-    </application>
 
+        <activity
+            android:name="com.example.notemaster.QuickNoteActivity"
+            android:exported="true"
+            android:theme="@style/Theme.NoteMaster.QuickNoteDialog">
+            <!-- Не реєструємо як LAUNCHER — відкривається лише по PendingIntent -->
+        </activity>
+
+        <receiver android:name=".ShortcutPinnedReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.launcher.action.PIN_SHORTCUT_SUCCESS" />
+            </intent-filter>
+        </receiver>
+
+        <meta-data
+            android:name="android.app.shortcuts"
+            android:resource="@xml/shortcuts" />
+    </application>
 </manifest>
